--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -15,6 +15,17 @@
   margin-left: 15%;
 }
 
+.info-container {
+  position: relative;
+  display: grid;
+  place-items: center;
+}
+
 .Info {
-  transform: scale(1);
+  transform: scale(3);
+}
+
+
+@media screen and (max-width: 1000px) {
+
 }
