Heavy modification of register component

--- a/Frontend/src/components/Register/Register.scss
+++ b/Frontend/src/components/Register/Register.scss
@@ -652,3 +652,12 @@ td.rdtYear:hover {
 }
 
 /* CRUD TABLE END */
+
+.user-name {
+    font-weight: 500;
+}
+
+h1 {
+    font-weight: 500 !important;
+    font-size: 30px !important;
+}
