--- a/Frontend/src/style/timeline.css
+++ b/Frontend/src/style/timeline.css
@@ -8,6 +8,6 @@
     height: 38px;
     border-bottom: 3px solid DimGray;
     left: 65px;
-    position: absolute;
+    /*position: absolute;*/
     z-index: -100;
 }
