--- a/Frontend/src/style/timeline.css
+++ b/Frontend/src/style/timeline.css
@@ -4,10 +4,10 @@
 }
 
 .line{
-    width: 50%;
+    width: 110%;
     height: 38px;
     border-bottom: 3px solid DimGray;
-    left: 65px;
+    /*left: 1000px;*/
     /*position: absolute;*/
     z-index: -100;
 }
