--- a/Frontend/src/components/Util/DatePicker/date-picker.css
+++ b/Frontend/src/components/Util/DatePicker/date-picker.css
@@ -2,6 +2,10 @@
     font-family: unset;
     font-size: 0.9rem;
   }
+
+.react-datepicker-popper {
+  z-index: 9999 !important;
+}
   
   .react-datepicker-wrapper,
   .react-datepicker__input-container {
